export const snapshot = {};

snapshot[`TransportSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  enum: [
    "websocket",
  ],
  type: "string",
}
`;

snapshot[`AgentConfigSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    activeTools: {
      items: {
        minLength: 1,
        type: "string",
      },
      type: "array",
    },
    builtinTools: {
      items: {
        enum: [
          "web_search",
          "visit_webpage",
          "fetch_json",
          "run_code",
          "vector_search",
        ],
        type: "string",
      },
      type: "array",
    },
    greeting: {
      type: "string",
    },
    instructions: {
      type: "string",
    },
    maxSteps: {
      exclusiveMinimum: 0,
      maximum: 9007199254740991,
      type: "integer",
    },
    mode: {
      enum: [
        "s2s",
      ],
      type: "string",
    },
    name: {
      minLength: 1,
      type: "string",
    },
    sttPrompt: {
      minLength: 1,
      type: "string",
    },
    toolChoice: {
      anyOf: [
        {
          enum: [
            "auto",
            "required",
            "none",
          ],
          type: "string",
        },
        {
          additionalProperties: false,
          properties: {
            toolName: {
              minLength: 1,
              type: "string",
            },
            type: {
              const: "tool",
              type: "string",
            },
          },
          required: [
            "type",
            "toolName",
          ],
          type: "object",
        },
      ],
    },
    transport: {
      items: {
        enum: [
          "websocket",
        ],
        type: "string",
      },
      minItems: 1,
      type: "array",
    },
    voice: {
      type: "string",
    },
  },
  required: [
    "name",
    "instructions",
    "greeting",
    "voice",
  ],
  type: "object",
}
`;

snapshot[`ToolSchemaSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    description: {
      minLength: 1,
      type: "string",
    },
    name: {
      minLength: 1,
      type: "string",
    },
    parameters: {
      additionalProperties: {},
      properties: {
        properties: {
          additionalProperties: {},
          propertyNames: {
            type: "string",
          },
          type: "object",
        },
        required: {
          items: {
            type: "string",
          },
          type: "array",
        },
        type: {
          const: "object",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
  },
  required: [
    "name",
    "description",
    "parameters",
  ],
  type: "object",
}
`;

snapshot[`DeployBodySchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    config: {
      additionalProperties: false,
      properties: {
        activeTools: {
          items: {
            minLength: 1,
            type: "string",
          },
          type: "array",
        },
        builtinTools: {
          items: {
            enum: [
              "web_search",
              "visit_webpage",
              "fetch_json",
              "run_code",
              "vector_search",
            ],
            type: "string",
          },
          type: "array",
        },
        greeting: {
          type: "string",
        },
        instructions: {
          type: "string",
        },
        maxSteps: {
          exclusiveMinimum: 0,
          maximum: 9007199254740991,
          type: "integer",
        },
        mode: {
          enum: [
            "s2s",
          ],
          type: "string",
        },
        name: {
          minLength: 1,
          type: "string",
        },
        sttPrompt: {
          minLength: 1,
          type: "string",
        },
        toolChoice: {
          anyOf: [
            {
              enum: [
                "auto",
                "required",
                "none",
              ],
              type: "string",
            },
            {
              additionalProperties: false,
              properties: {
                toolName: {
                  minLength: 1,
                  type: "string",
                },
                type: {
                  const: "tool",
                  type: "string",
                },
              },
              required: [
                "type",
                "toolName",
              ],
              type: "object",
            },
          ],
        },
        transport: {
          items: {
            enum: [
              "websocket",
            ],
            type: "string",
          },
          minItems: 1,
          type: "array",
        },
        voice: {
          type: "string",
        },
      },
      required: [
        "name",
        "instructions",
        "greeting",
        "voice",
      ],
      type: "object",
    },
    env: {
      additionalProperties: {
        type: "string",
      },
      propertyNames: {
        type: "string",
      },
      type: "object",
    },
    html: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
    toolSchemas: {
      items: {
        additionalProperties: false,
        properties: {
          description: {
            minLength: 1,
            type: "string",
          },
          name: {
            minLength: 1,
            type: "string",
          },
          parameters: {
            additionalProperties: {},
            properties: {
              properties: {
                additionalProperties: {},
                propertyNames: {
                  type: "string",
                },
                type: "object",
              },
              required: {
                items: {
                  type: "string",
                },
                type: "array",
              },
              type: {
                const: "object",
                type: "string",
              },
            },
            required: [
              "type",
            ],
            type: "object",
          },
        },
        required: [
          "name",
          "description",
          "parameters",
        ],
        type: "object",
      },
      type: "array",
    },
    transport: {
      items: {
        enum: [
          "websocket",
        ],
        type: "string",
      },
      minItems: 1,
      type: "array",
    },
    worker: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
  },
  required: [
    "worker",
    "html",
    "config",
    "toolSchemas",
  ],
  type: "object",
}
`;

snapshot[`EnvSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: {
    type: "string",
  },
  properties: {
    ASSEMBLYAI_API_KEY: {
      minLength: 1,
      type: "string",
    },
  },
  required: [
    "ASSEMBLYAI_API_KEY",
  ],
  type: "object",
}
`;
